Release v4.0.1 - Final optimization
- Added /api/stats with player UUID support and API key auth
- Removed deprecated endpoints (stats.txt, stats.js, leaderboard.js, /api/stats/runtime)
- Unified commands: removed analytics (merged into info), added /ws alias
- Added startup banner, stop/start guards, dynamic label in help
- Rewrote config.yml and README.md with full documentation
- Added CORS headers with Accept, Access-Control-Allow-Headers
- @SuppressWarnings(deprecation) on all legacy API usages
- Fixed unused imports, null-safety warnings in KillStatsService
- Updated deploy/WebServer/config.yml to match full config schema
- Version bumped to 4.0.1

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>